--- a/css/app.css
+++ b/css/app.css
@@ -73,3 +73,16 @@
 .title-section {
     text-align: center;
 }
+
+.resolution-canvas {
+    width : 100%;
+    height: 500px;
+}
+
+.shadow-canvas {
+    -moz-box-shadow: 1px 3px 10px 0px #656565;
+    -webkit-box-shadow: 1px 3px 10px 0px #656565;
+    -o-box-shadow: 1px 3px 10px 0px #656565;
+    box-shadow: 1px 3px 10px 0px #656565;
+    filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=161, Strength=10);
+}
