--- a/partials/homepage.html
+++ b/partials/homepage.html
@@ -32,7 +32,7 @@
         <a class="list-group-item disabled ">{{ 'homepage.repository' | translate }}</a>
         <a class="list-group-item item-repo-app"
         ng-repeat="repo in listRepo  | filter:searchRepository:strict | limitTo:10" 
-        href="">
+        ng-href="#/repository/{{ repo.owner.login }}/{{ repo.name }}">
             <span>{{ repo.name }}</span>
             <span>{{ 'homepage.author' | translate }} : {{ repo.owner.login }}</span>
         </a>
