Division de la page repository committer de la page repository commits. Ajout de Ng-Cookies pour pouvoir enregistrer les recherches déjà faite. Ajout du Service APIGithub qui permet d'alléger les deux controllers. Modification du mot "développé" dans les traductions

--- a/css/app.css
+++ b/css/app.css
@@ -86,3 +86,7 @@
     box-shadow: 1px 3px 10px 0px #656565;
     filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=161, Strength=10);
 }
+
+.button-commit {
+    margin: 0px 0px 5px 30px;
+}
