Projet Terminé. Ajout de quelques propriété css. Ajout des dernière traduction. Suppression des code inutiles. Ajout de la pagination pour avoir les 100 résultats.

--- a/css/app.css
+++ b/css/app.css
@@ -4,7 +4,7 @@
     border-bottom: 3px solid #970808;
 }
 
-.header-app div{
+.header-app-title{
     color: white;
     width: 430px;
     margin: auto;
@@ -83,10 +83,60 @@
     filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=161, Strength=10);
 }
 
-.button-commit {
+.button-canvas {
     margin: 0px 0px 5px 30px;
 }
 
 .m-top20 {
     margin-top: 20px;
+}
+
+#myModalLabel {
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.modal-year {
+    border-bottom: 2px solid #DADADA;
+}
+
+.modal-year h4 {
+    text-align: center;
+}
+
+.modal-body-content {
+    width: 80%;
+    margin: 30px auto;
+    border-top: 1px solid rgb(204, 204, 204);
+}
+
+.modal-span-first,
+.modal-span-second {
+    display: block;
+    line-height: 2;
+}
+
+.modal-span-first {
+    text-align: right;
+    margin-right: 50px;
+}
+
+.modal-span-second {
+    text-align: justify;
+}
+
+#button-commit {
+    position: absolute;
+    top: 40px;
+    left: 20px;
+}
+
+#button-saving {
+    position: absolute;
+    top: 85px;
+    right: 5px;
+}
+
+.f-right {
+    float: right;
 }
